--- a/app/views/prototypes/all-staff/subject-type.html
+++ b/app/views/prototypes/all-staff/subject-type.html
@@ -351,7 +351,7 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="citizenship-conditional" name="citizen" type="checkbox" value="email" data-aria-controls="conditional-citizenship-conditional">
         <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional">
-          Other learning programmes subject 1 
+          Other technical / vocational subject 1 
         </label>
       </div>
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional">
@@ -370,7 +370,7 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="citizenship-conditional-2" name="citizen" type="checkbox" value="phone" data-aria-controls="conditional-citizenship-conditional-2">
         <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-2">
-          Other learning programmes subject 2
+          Other technical / vocational subject 2
         </label>
       </div>
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional-2">
@@ -385,7 +385,7 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="citizenship-conditional-3" name="citizen" type="checkbox" value="text message" data-aria-controls="conditional-citizenship-conditional-3">
         <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-3">
-          Other learning programmes subject 3
+          Other technical / vocational subject 3
         </label>
       </div>
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional-3">
@@ -408,7 +408,7 @@
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
         <span class="govuk-accordion__section-button" id="accordion-default-heading-3">
-          Other
+          Other learning programmes
         </span>
       </h2>
     </div>
