--- a/app/views/prototypes/all-staff/edit.html
+++ b/app/views/prototypes/all-staff/edit.html
@@ -35,7 +35,7 @@
   <label class="govuk-label" for="full-name">
     First names
   </label>
-  <input class="govuk-input" id="first-names" name="first-names" type="text" autocomplete="name" spellcheck="false">
+  <input class="govuk-input" id="first-names" name="first-names" type="text" autocomplete="name" spellcheck="false" value="John Vincent">
 </div>
 
   
@@ -48,7 +48,7 @@
   <label class="govuk-label" for="full-name">
     Last name
   </label>
-  <input class="govuk-input" id="full-name" name="full-name" type="text" autocomplete="name" spellcheck="false">
+  <input class="govuk-input" id="full-name" name="full-name" type="text" autocomplete="name" spellcheck="false" value="Adams">
 </div>
 
   
@@ -67,10 +67,10 @@
     <div class="govuk-date-input" id="dob">
       <div class="govuk-date-input__item">
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-date-input__label" for="dob-day">
+          <label class="govuk-label govuk-date-input__label" for="dob-day" >
             Day
           </label>
-          <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-day" name="dob-day" type="text" autocomplete="bday-day" pattern="[0-9]*" inputmode="numeric">
+          <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-day" name="dob-day" type="text" autocomplete="bday-day" pattern="[0-9]*" inputmode="numeric" value="10">
         </div>
       </div>
       <div class="govuk-date-input__item">
@@ -78,7 +78,7 @@
           <label class="govuk-label govuk-date-input__label" for="dob-month">
             Month
           </label>
-          <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-month" name="dob-month" type="text" autocomplete="bday-month" pattern="[0-9]*" inputmode="numeric">
+          <input class="govuk-input govuk-date-input__input govuk-input--width-2" value="01"id="dob-month" name="dob-month" type="text" autocomplete="bday-month" pattern="[0-9]*" inputmode="numeric">
         </div>
       </div>
       <div class="govuk-date-input__item">
@@ -86,7 +86,7 @@
           <label class="govuk-label govuk-date-input__label" for="dob-year">
             Year
           </label>
-          <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="dob-year" name="dob-year" type="text" autocomplete="bday-year" pattern="[0-9]*" inputmode="numeric">
+          <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="dob-year" name="dob-year" type="text" autocomplete="bday-year" pattern="[0-9]*" inputmode="numeric"value="1992">
         </div>
       </div>
     </div>
@@ -109,19 +109,20 @@
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
           Male
         </label>
-        <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          
+        <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint" value="true">
         </span>
       </div>
+
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-2" name="ethnic-group" type="radio" value="black-african-black-british-or-caribbean" aria-describedby="ethnic-group-2-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-2">
           Female
         </label>
         <span id="ethnic-group-2-item-hint" class="govuk-hint govuk-radios__hint">
-          
         </span>
       </div>
+
+
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-3" name="ethnic-group" type="radio" value="mixed-or-multiple-ethnic-groups" aria-describedby="ethnic-group-3-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-3">
