--- a/app/views/prototypes/provider-eve/home.html
+++ b/app/views/prototypes/provider-eve/home.html
@@ -54,7 +54,7 @@
                 </div>
     
                 <div class="govuk-grid-column-one-third tile">
-                    <a class="min-height" href="start-staff">
+                    <a class="min-height" href="start-intro">
                         <span class="govuk-heading-m heading">Submit your staff details</span>
                         <span class="govuk-heading-s heading">28 November 2021</span>
                     </a>
