--- a/app/views/prototypes/provider-eve/start-intro.html
+++ b/app/views/prototypes/provider-eve/start-intro.html
@@ -32,7 +32,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">FE staff return</h1>
-        <span class="govuk-caption-l">August 2019 to September 2020</span><br>
+        <span class="govuk-caption-l">August 2020 to September 2021</span><br>
 
         <p class="govuk-body">Use this service to:</p>
 
@@ -45,7 +45,7 @@
 
         <p class="govuk-body">Registering takes around 5 minutes.</p>
 
-        <a href="#" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
+        <a href="start-staff" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
           Start now
           <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
