--- a/app/views/prototypes/small-itp/salary.html
+++ b/app/views/prototypes/small-itp/salary.html
@@ -31,7 +31,7 @@
   </span>
 
             </h1>
-            <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text">
+            <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" (£)>
           </div>
 
           <a href="contracted-hours" class="govuk-button show-continue" style="display: inline;">
