--- a/app/views/prototypes/small-itp/start-staff.html
+++ b/app/views/prototypes/small-itp/start-staff.html
@@ -37,7 +37,7 @@
       
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" a href="/prototypes/all-staff/mis">My staff</a>
+        <a class="browse-list-item-link" a href="mis">My staff</a>
 
         
         
