--- a/app/views/prototypes/small-itp/confirmation-provider.html
+++ b/app/views/prototypes/small-itp/confirmation-provider.html
@@ -34,7 +34,7 @@
 
         <p class="govuk-body"></p>
 
-        <h2 class="govuk-heading-m">You need to submit your <a href="/prototypes/all-staff/start-staff" class="govuk-link">staff information</a></h2>
+        <h2 class="govuk-heading-m">You need to submit your <a href="start-staff" class="govuk-link">staff information</a></h2>
 
         
        <!-- <p class="govuk-body">
