--- a/app/views/prototypes/small-itp/role.html
+++ b/app/views/prototypes/small-itp/role.html
@@ -29,6 +29,21 @@
     </legend><br>
     
     <div class="govuk-radios">
+      
+
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+          Senior leadership
+        </label>
+        
+
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          This could include principals and vice-principals of colleges, working directors and CEOs of organisations and companies, and other people who would be considered part of a senior management team
+        </span>
+      </div><br>
+
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
@@ -37,24 +52,14 @@
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
           Includes tutors, trainers, instructors and assessors
         </span>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Senior leadership
-        </label>
-
-        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          This could include principals and vice-principals of colleges, working directors and CEOs of organisations and companies, and other people who would be considered part of a senior management team
-        </span>
-      </div>
+      </div><br>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
           Support
         </label>
-      </div>
+      </div><br>
 
 
       <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
