--- a/app/views/prototypes/small-itp/easy.html
+++ b/app/views/prototypes/small-itp/easy.html
@@ -23,7 +23,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What was the average length of time it took to fill these vacancies?
+        How easy or difficult was it to fill these vacancies?
       </h1>
     </legend><br>
 
